finalizadas as páginas de posts e sobre

--- a/src/styles/homePage.module.scss
+++ b/src/styles/homePage.module.scss
@@ -119,7 +119,7 @@
 }
 
 .homeFooter{
-    margin: 6rem auto;
+    margin: 8rem auto 6rem;
     max-width: 1120px;
     padding: 0 2rem;
     display: flex;
