first release version

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,8 @@
 :root{
     --white: #fff; /*para criar variáveis em CSS, basta usar o travessão duplo --*/
 
+    --black: #000;
+
     --gray-lema: #cfdbe5;
     --gray-100: #afafaf;
     --gray-200: #525252;
@@ -21,8 +23,11 @@
     --blue-lema-dk: #033584;
     --blue-navy: #071b3a;
     --blue-lema-lt: #4d9cd4;
+    --blue-lema-tri: #013c68;
     
     --beige-lema: #eddbc7;
+
+    --pink-lema-tri: #fe564b;
 
     --yellow-500: #ffbe16;
     --yellow-800: #e68213;
