--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,6 +1,6 @@
 .headerContainer{
     height: var(--header-size);
-    background: var(--blue-lema-dk);
+    background: var(--blue-lema-tri);
 }
 
 .headerContent{
@@ -30,7 +30,7 @@
             padding: 0 0.5rem;
             height: var(--header-size);
             line-height: var(--header-size);
-            color: var(--gray-lema);
+            color: var(--pink-lema-tri);
             transition: color 0.2s;
 
             & + a{ //para aplicar em todos, menos no primeiro
@@ -53,7 +53,7 @@
     margin-left: auto;
     height: 3rem;
     border-radius: 3rem;
-    background: var(--blue-lema-lt);
+    background: var(--pink-lema-tri);
     border: 0;
     padding: 0 1.5rem;
     display: flex;
